--- a/app/src/main/res/layout/list_item_space_shown.xml
+++ b/app/src/main/res/layout/list_item_space_shown.xml
@@ -8,6 +8,14 @@
     android:padding="16dp"
     android:gravity="center_vertical">
 
+    <ImageView
+        android:id="@+id/list_spaceSetting_drag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="4dp"
+        android:paddingEnd="8dp"
+        app:srcCompat="@drawable/ic_drag_handle" />
+
     <TextView
         android:id="@+id/list_spaceSetting_name"
         android:layout_width="wrap_content"
