--- a/app/src/main/res/layout/dialog_detail_episode.xml
+++ b/app/src/main/res/layout/dialog_detail_episode.xml
@@ -79,9 +79,8 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="5"
                         android:orientation="horizontal">
 
                         <TextView
@@ -99,14 +98,14 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="8dp"
                             android:layout_weight="1"
-                            tools:text="18" />
+                            tools:text="TV-MA" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="4"
+                        android:layout_weight="1"
                         android:orientation="horizontal">
 
                         <TextView
@@ -245,11 +244,13 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/dialog_detailEpisode_ratingTendency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:text="Bewertung:"
+                style="@style/TextButtonStyle.Normal"
                 android:textStyle="bold" />
 
             <FrameLayout
