--- a/app/src/main/res/layout/help_custom_code_video.xml
+++ b/app/src/main/res/layout/help_custom_code_video.xml
@@ -688,7 +688,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="#undefined# (Die Funktion gibt ein Objekt zurück), #true/false# (Alle Aufgeklappt), Eine Funktion"
+                            android:text="#undefined# (Die Funktion gibt ein Objekt zurück), #true/false# (Alle Auf-/ Zugeklappt), Eine Funktion (Mappt die Entries auf einen Zustand)"
                             android:textSize="12sp" />
                     </TableRow>
                 </TableLayout>
@@ -910,6 +910,59 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="log(msg)"
+                    android:textStyle="bold" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Fügt einen neuen Eintrag zum Log hinzu"
+                    android:textSize="12sp"
+                    android:typeface="serif" />
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="3dp"
+                            android:text="msg:"
+                            android:textSize="12sp"
+                            android:textStyle="italic" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Der zu loggende Wert"
+                            android:textSize="12sp" />
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="5dp"
+                android:background="?android:attr/listDivider" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="getConstants()"
                     android:textStyle="bold" />
 
@@ -1048,6 +1101,26 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="#true#, #flase# (Soll JSON output geprettyPrintet werden?)"
+                        android:textSize="12sp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="3dp"
+                        android:text="showLog:"
+                        android:textSize="12sp"
+                        android:textStyle="italic" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="#true#, #flase# (Soll das Log angezeigt werden?)"
                         android:textSize="12sp" />
                 </TableRow>
             </TableLayout>
