--- a/app/src/main/res/layout/dialog_detail_episode.xml
+++ b/app/src/main/res/layout/dialog_detail_episode.xml
@@ -243,15 +243,31 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/dialog_detailEpisode_ratingTendency"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
-                android:text="Bewertung:"
-                style="@style/TextButtonStyle.Normal"
-                android:textStyle="bold" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/dialog_detailEpisode_ratingTendency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Bewertung:"
+                    style="@style/TextButtonStyle.Normal"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/dialog_detailEpisode_ratingTendency_icon"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:src="@drawable/ic_arrow_up"
+                    android:visibility="gone"
+                    app:tint="@color/colorGreen"
+                    android:layout_gravity="end"
+                    tools:visibility="visible" />
+
+            </LinearLayout>
 
             <FrameLayout
                 android:id="@+id/customRating_layout"
