saveAll calls mit Toast standardisiert Viele kleine Verbesserungen in ShowActivity Bilder zu CustomCode hinzugefügt Zeiten von Ansichten können individuell editiert werden

--- a/app/src/main/res/layout/dialog_edit_custom_code.xml
+++ b/app/src/main/res/layout/dialog_edit_custom_code.xml
@@ -271,6 +271,7 @@
                             style="@style/ImageButtonStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:contentDescription="//"
                             android:gravity="center"
                             android:minWidth="33dp"
                             android:text=";"
