--- a/app/src/main/res/layout/help_custom_code_video.xml
+++ b/app/src/main/res/layout/help_custom_code_video.xml
@@ -306,7 +306,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="#id#, #idM#, #dt# (Als String; kann leer gelassen werden)"
+                            android:text="#id#, #idM#, #dt#, #im# (Als String; kann leer gelassen werden)"
                             android:textSize="12sp" />
                     </TableRow>
 
