Kommentare zu Videos hinzugefügt Alle Episoden können nach Bewertung sortiert werden

--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -173,6 +173,29 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/dialog_video_comment_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:text="Kommentar:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dialog_video_comment"
+                style="@style/TextButtonStyle.Normal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:singleLine="true" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
