--- a/app/src/main/res/menu/task_bar_show.xml
+++ b/app/src/main/res/menu/task_bar_show.xml
@@ -71,4 +71,7 @@
         android:checkable="true"
         android:checked="true"
         android:title="Scrollen" />
+    <item
+        android:id="@+id/taskBar_show_allEpisodes"
+        android:title="Alle Episoden" />
 </menu>
