SHOW_STATUS_FILTER zu ShowActivity hinzugefügt Episodenlänge wird von TMDB geladen Check hinzugefügt, dass nicht aus Versehen Episoden gelöscht werden

--- a/app/src/main/res/layout/dialog_crop_image.xml
+++ b/app/src/main/res/layout/dialog_crop_image.xml
@@ -39,7 +39,7 @@
             android:layout_margin="6dp"
             android:foreground="@drawable/ripple_round"
             android:padding="10dp"
-            app:srcCompat="@drawable/ic_check" />
+            app:srcCompat="@drawable/ic_check_white" />
     </LinearLayout>
 
     <FrameLayout
