--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -150,6 +150,6 @@
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:visibility="gone"
-        app:srcCompat="@drawable/ic_check"
+        app:srcCompat="@drawable/ic_check_white"
         tools:visibility="visible" />
 </FrameLayout>
