--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -65,7 +65,7 @@
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="10dp"
             android:visibility="gone"
-            app:srcCompat="@drawable/ic_check"
+            app:srcCompat="@drawable/ic_check_white"
             android:tint="@color/colorDrawable"
             tools:visibility="visible" />
     </FrameLayout>
