--- a/app/src/main/res/layout/dialog_video_internet.xml
+++ b/app/src/main/res/layout/dialog_video_internet.xml
@@ -95,7 +95,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        android:src="@drawable/ic_check"
+        android:src="@drawable/ic_check_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
