--- a/app/src/main/res/layout/list_item_collection_video.xml
+++ b/app/src/main/res/layout/list_item_collection_video.xml
@@ -32,7 +32,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:visibility="gone"
-            app:srcCompat="@drawable/ic_check"
+            app:srcCompat="@drawable/ic_check_white"
             app:tint="#4CAF50"
             tools:visibility="visible" />
 
