--- a/app/src/main/res/layout/list_item_intersection.xml
+++ b/app/src/main/res/layout/list_item_intersection.xml
@@ -29,5 +29,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tint="#4CAF50"
-        app:srcCompat="@drawable/ic_check" />
+        app:srcCompat="@drawable/ic_check_white" />
 </LinearLayout>
