--- a/app/src/main/res/menu/task_bar_media.xml
+++ b/app/src/main/res/menu/task_bar_media.xml
@@ -29,7 +29,7 @@
 
     <item
         android:id="@+id/taskBar_media_confirm"
-        android:icon="@drawable/ic_check"
+        android:icon="@drawable/ic_check_white"
         android:iconTint="#FFFFFF"
         android:title="Bestätigen"
         android:visible="false"
